# LangChain-Application

./: .gitignore  Curriculum  LCEL.py  firstAgent.py  jobHunterAgent.py  main.py  parsers.py  promptTemplates.py  pyproject.toml  simpleRAG.py
HITL/: hitl copy.ipynb  hitl.ipynb  hitl_and_persistance.ipynb  hitl_mail_genrator.ipynb
React-Function-Calling/: main.py  nodes.py  react.py
lagchainFundamantels/: README.md  ReAct_loop_agent.py  firstAgent.py  pyproject.toml  ragInferance.py  rickAndMorty.txt
persistance/: persistance_test.ipynb
