[project]
name = "langchain-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.0.27",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-tavily>=0.2.17",
    "python-dotenv>=1.2.2",
]
